--- a/Track1_solution.ipynb
+++ b/Track1_solution.ipynb
@@ -29,6 +29,7 @@
   {
    "source": [
     "# Churned Customers and How to find Them\n",
+    "#### Link to Jupyter Notebook (recommended): https://github.com/HuyNguyen7994/VIB_Datarathon/blob/master/Track1_solution.ipynb\n",
     "## 1. Abstract\n",
     "Due to non-contractual nature between users and our application, it's vital to seperate customers who are still active on MyVIB to who seemingly have left pernamently (*churned customers*). Fortunately, *churn defition* and *churn prediction* is an active and evolving field of research. Most papers that explored similar problems (fremium game, e-commerce, retail store...) used ***inactive duration*** as the defining statistics to classify whether or not a given customer has churned. Using this same technique, I explored the datasets and found that ***20 days*** is the most approriate ***inactive duration***, which should only give us **5% false positive rate** over any sufficient period of time.\n",
     "## 2. Paper with Code\n",
