--- a/Track1_solution.ipynb
+++ b/Track1_solution.ipynb
@@ -29,9 +29,9 @@
   {
    "source": [
     "# Churned Customers and How to find Them\n",
-    "#### Link to Jupyter Notebook (recommended): https://github.com/HuyNguyen7994/VIB_Datarathon/blob/master/Track1_solution.ipynb\n",
+    "#### Link to Jupyter Notebook: https://github.com/HuyNguyen7994/VIB_Datarathon/blob/master/Track1_solution.ipynb\n",
     "## 1. Abstract\n",
-    "Due to non-contractual nature between users and our application, it's vital to seperate customers who are still active on MyVIB to who seemingly have left pernamently (*churned customers*). Fortunately, *churn defition* and *churn prediction* is an active and evolving field of research. Most papers that explored similar problems (fremium game, e-commerce, retail store...) used ***inactive duration*** as the defining statistics to classify whether or not a given customer has churned. Using this same technique, I explored the datasets and found that ***20 days*** is the most approriate ***inactive duration***, which should only give us **5% false positive rate** over any sufficient period of time.\n",
+    "Customers who left MyVIB application *pernamently* (or *churned event* in literature) is any customer who hasn't performed any activity or transaction on MyVIB app for at least ***20 consecutive days*** from the **last active date** to the **end of this observation period**. Using this defition, we expect to have only **5% false positive chance** to mis-classify any non-active duration as churned event.\n",
     "## 2. Paper with Code\n",
     "### 1. The Big Picture"
    ],
@@ -58,7 +58,7 @@
   },
   {
    "source": [
-    "There are 6 dataset, but we only need to explore datasets 2.Data_MyVIB_Transaction and 3.Data_MyVIB_Activity as they are directly tied and exclusive to MyVIB application. Other datasets are useful, but it may contain activities from other platform (direct banking, web, mobile...) which I cannot easily distinguish."
+    "There are 6 dataset, but we only need to explore datasets 2.Data_MyVIB_Transaction and 3.Data_MyVIB_Activity as they are directly tied and exclusive to MyVIB application."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -171,7 +171,7 @@
   },
   {
    "source": [
-    "Let's count all transactions and activities and visualize the results"
+    "Visualize how active our app was in 2019"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -259,7 +259,7 @@
   },
   {
    "source": [
-    "The Activities data exhibits the same characteristics as Transactions data, but at much higher rate, and there is an abnormal absence of records around July. Fortunately, we can still infer **if user is active** from Transaction data (with some loss). Unfortunately, this will be a big problem for our prediction task later on."
+    "The Activities data follows the same pattern Transactions data. However, there is an abnormal absence of records around July (database failure?). Fortunately, we can still answer **if user is active** by joining both Transactions and Activities datasets."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -267,9 +267,11 @@
   {
    "source": [
     "### 2. The Work\n",
-    "In academic language, our data is *right-censored*. It means we don't have any idea what will happen after the observation windows (*31/12/2019*). As there is no definite **quit event** (customers who had left for a long time can still come back later), we can't never be certain if a customer is churned unless we set observation windows to $t\\rightarrow\\infty$, which in turn makes the whole study irrelevant.  \n",
-    "Hence, I propose the *negative approach* to determine the approriate cutoff. Given an arbitrary ***inactive duration*** assumption (say, 7 days), we can't know if \"customer is churned\" is true forever (this event is only certain at $t\\rightarrow\\infty$), but we know we are wrong right away as soon as any \"churned\" customer returns anytime in the observation windows. In other words, we can calculate the *false positive* rate of our assumption.  \n",
-    "To determine how wrong we will be with any ***inactive duration*** assumptions, we will split durations into 2 sets: censored duration - inactive duration from last activity to the end of observation, and uncensored durations - all inactive durations observed in the period except the last one. We will use the uncensored durations to determine and test our assumptions, and use the censored part to classify whether or not a given customer is churned. The reason for this split is because all censored duration is *opened-ended*, that is, it is not ended, unlike uncensored durations which all have definite end (return of the customer)."
+    "Both datasets (or any among six provided) don't contain any clear label for when a customer leave MyVIB app for good (non-contractual). Furthuremore, the observation period only starts from 01/01/2019 until 31/12/2019 (right-censored). Therefore, it necessitates **\"churn definition\"** task before one can attempt **\"churn prediction\"**.  \n",
+    "\n",
+    "Since it's impossible to even know if a long-inactive customer is truly churned (this event is only certain at $t\\rightarrow\\infty$), we need to accept certain degree of error for any definition. Therefore, I propose a *false positive approach* to this problem: given certain *cutoff period*, what is the chance that any *inactive duration* classfied as *churned* will be followed by an active day anytime later?  \n",
+    "\n",
+    "To accomplish this, we will split our **inactive durations** into 2 sets: censored duration - censored duration - inactive duration from last activity to the end of observation; and uncensored durations - all inactive durations observed in the period except the last censored one. We will use the uncensored durations to determine and test our assumptions, and use the censored part to classify whether or not a given customer is churned. The reason for this split is because all censored duration is *opened-ended*, that is, it is not certain at the end, unlike uncensored durations which all have the return of customer at the end."
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -288,7 +290,8 @@
     "df_inactive = df_inactive[0]\n",
     "# drop invalid data at the begining as there are no previous days to calculate the difference\n",
     "df_inactive_duration = df_inactive.dropna()\n",
-    "# turn distance into duration since distance of 1 means no inactive day in between (both yesterday and today are active), only distance of 2 or above has at least 1 inactive day in between\n",
+    "# turn distance into duration since distance of 1 means no inactive day in between (both yesterday \n",
+    "# and today are active), only distance of 2 or above has at least 1 inactive day in between\n",
     "df_inactive_duration = df_inactive_duration.astype(\"timedelta64[D]\") - 1\n",
     "# again, we want duration, not distance, so only select duration larger than 0\n",
     "inactive_duration = df_inactive_duration[df_inactive_duration > 0]\n",
@@ -360,7 +363,8 @@
     "cum_days = inactive_duration / inactive_duration.sum()\n",
     "cumsum_days = cum_days.cumsum()\n",
     "cumsum_ax = cumsum_days.plot(xlim=(0,60), title=\"Cumulative Percentage Sum of Inactive Durations\", ylabel=\"Cumulative Sum\", xlabel=\"Inactive Duration\") \n",
-    "# I cheat a little bit since plotting all x-value makes the graph really ugly and hard to discern any pattern, as you can see from previous graph\n",
+    "# I cheat a little bit since plotting all x-value makes the graph really ugly and \n",
+    "# hard to discern any pattern, as you can see from previous graph\n",
     "cumsum_ax.set_yticklabels([f'{x:,.0%}' for x in cumsum_ax.get_yticks()])\n",
     "cumsum_ax"
    ]
@@ -421,7 +425,7 @@
   },
   {
    "source": [
-    "So cut off at 20 days is a good rate. We expect to see only 5% false positive (customers that exceeded the inactive duration yet returned way later). Notice that this is on incidence basis, so a customer who logs in once a month will trip the the alarm multiple times.    \n",
+    "So cut off at 20 days is a good rate. We expect to see only 5% false positive (\"churned events\" followed up by \"return event\" later). Notice that this is on incidence basis, so a customer who logs in once a month will trip the the alarm multiple times.    \n",
     "#### Apply the cutoff duration on the censored set to determine if user is churned:"
    ],
    "cell_type": "markdown",
@@ -488,6 +492,7 @@
     }
    ],
    "source": [
+    "# latest inactive duration of all customers\n",
     "latest_inactive_duration = pd.to_datetime(\"2019-12-31\") - df_latest_active\n",
     "latest_inactive_duration"
    ]
@@ -521,6 +526,7 @@
    ],
    "source": [
     "latest_inactive_duration = latest_inactive_duration.astype(\"timedelta64[D]\")\n",
+    "# customers whose last inactive duration exceeded cutoff duration will be labeled \"churned\"\n",
     "left_customers = latest_inactive_duration[latest_inactive_duration >= cutoff_duration]\n",
     "left_customers"
    ]
@@ -581,21 +587,36 @@
   {
    "source": [
     "### 3. Conclusion\n",
-    "With *negative approach* and 5% tolerance for false positive, I found ***20 days of inactivity*** to be the approriate definition for ***customers who left MyVIB (churned)***. From that definition, we calculated the attrition rate of ***~25.37%/year***, or ***expected lifetime of 3.94 years for each customer***. However, since we are missing a chunk of data in July, we undercounted the frequency of inactive durations around 180 days. It's a very small amount, but I suspect if somehow we could recover that missing data, we could see our cutoff pushed up a little bit to *21 days*, thus lower the attrition rate and increase the customers' expected lifetime accordingly."
+    "With *false positive approach* and 5% tolerance, I found ***20 days of inactivity*** to be the approriate definition for ***customers who left MyVIB (churned)***. From that definition, we calculated the attrition rate of ***~25.37%/year***, or ***expected lifetime of 3.94 years for each customer***. However, since we are missing a chunk of data in July, we undercounted the frequency of inactive durations around 180-day mark. It's a very small amount (no significant sign on cumulative sum graph), so I reckon we can safely disregard the missing data for this track."
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "source": [
-    "## 3. References\n",
+    "## 3. Future Improvement\n",
+    "### 1. Improvement to definition\n",
+    "- As with any one-size-fit-all solution, using **cutoff duration** is fast, simple, intuitive, but not well-tailored to a single customer. If a customer only logs in once a month, it will trip the system several times, and if any \"anti-churning prevention campaign\" is in place, it means waste of precious time and money on loyal customers who would never leave.\n",
+    "### 2. Prediction model:\n",
+    "- Survival Random Forest (SRF) seems to be the well-suited model, since it addresses right-censored problem, and meta research supports the performance of SRF over other prediction model. Some literature also suggests Deep Learning model performed really well, but for this competition I will go forward with the SRF since I'm not too well-familiar with more advanced Neural Network model."
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "## 4. References\n",
     "Lee, E., Jang, Y., Yoon, D., Jeon, J., Yang, S. I., Lee, S. K., ... & Kim, K. J. (2018). Game data mining competition on churn prediction and survival analysis using commercial game log data. arXiv preprint arXiv:1802.02301.  \n",
     "\n",
     "Kristensen, J. T., & Burelli, P. (2019, August). Combining sequential and aggregated data for churn prediction in casual freemium games. In 2019 IEEE Conference on Games (CoG) (pp. 1-8). IEEE.  \n",
     "\n",
     "Hadiji, F., Sifa, R., Drachen, A., Thurau, C., Kersting, K., & Bauckhage, C. (2014, August). Predicting player churn in the wild. In 2014 IEEE Conference on Computational Intelligence and Games (pp. 1-8). Ieee.  \n",
     "\n",
-    "Norbert Schumacher, N. S. (2007). Measuring Customer Lifetime (MLM-41383-48 07/07). Philadelphia University in Jordan. https://www.philadelphia.edu.jo/academics/mararchive/uploads/Measuring%20Customer%20Lifetime.pdf\n"
+    "Norbert Schumacher, N. S. (2007). Measuring Customer Lifetime (MLM-41383-48 07/07). Philadelphia University in Jordan. https://www.philadelphia.edu.jo/academics/mararchive/uploads/Measuring%20Customer%20Lifetime.pdf\n",
+    "\n",
+    "Ahn, J., Hwang, J., Kim, D., Choi, H., & Kang, S. (2020). A Survey on Churn Analysis in Various Business Domains. IEEE Access, 8, 220816-220839.\n",
+    "\n",
+    "D-Curve: An Improved Method for Defining Non-Contractural Churn with Type I and Type II Errors. (2020, December 11). Medium. https://medium.com/indeed-engineering/d-curve-an-improved-method-for-defining-non-contractual-churn-with-type-i-and-type-ii-errors-f4c956b7b7c9"
    ],
    "cell_type": "markdown",
    "metadata": {}
