--- a/Track1_solution.ipynb
+++ b/Track1_solution.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "source": [
-    "This is a nice example of time series data, with clear trend and seasonality. Even though time series decomposition isn't relevant to our problem right now (we only need to know **if user is active**, we don't need to know **how active**), I guess Transactions (and Activities) data is weekly-cyclical."
+    "This is a nice example of time series data, with clear trend and seasonality"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -271,7 +271,7 @@
     "\n",
     "Since it's impossible to even know if a long-inactive customer is truly churned (this event is only certain at $t\\rightarrow\\infty$), we need to accept certain degree of error for any definition. Therefore, I propose a *false positive approach* to this problem: given certain *cutoff period*, what is the chance that any *inactive duration* classfied as *churned* will be followed by an active day anytime later?  \n",
     "\n",
-    "To accomplish this, we will split our **inactive durations** into 2 sets: censored duration - censored duration - inactive duration from last activity to the end of observation; and uncensored durations - all inactive durations observed in the period except the last censored one. We will use the uncensored durations to determine and test our assumptions, and use the censored part to classify whether or not a given customer is churned. The reason for this split is because all censored duration is *opened-ended*, that is, it is not certain at the end, unlike uncensored durations which all have the return of customer at the end."
+    "To accomplish this, we will split our **inactive durations** into 2 sets: *censored duration* - inactive duration from last activity to the end of observation; and *uncensored durations* - all inactive durations observed in the period except the last censored one. We will use the uncensored durations to determine and test our assumptions, and use the censored part to classify whether or not a given customer is churned. The reason for this split is because all censored duration is *opened-ended*, that is, it is not certain at the end, unlike uncensored durations which all have the return of customer at the end."
    ],
    "cell_type": "markdown",
    "metadata": {}
