fix something weird with markdown

--- a/Track1_solution.ipynb
+++ b/Track1_solution.ipynb
@@ -596,9 +596,9 @@
    "source": [
     "## 3. Future Improvement\n",
     "### 1. Improvement to definition\n",
-    "- As with any one-size-fit-all solution, using **cutoff duration** is fast, simple, intuitive, but not well-tailored to a single customer. If a customer only logs in once a month, it will trip the system several times, and if any \"anti-churning prevention campaign\" is in place, it means waste of precious time and money on loyal customers who would never leave.  \n",
+    "As with any one-size-fit-all solution, using **cutoff duration** is fast, simple, intuitive, but not well-tailored to a single customer. If a customer only logs in once a month, it will trip the system several times, and if any \"anti-churning prevention campaign\" is in place, it means waste of precious time and money on loyal customers who would never leave.  \n",
     "### 2. Prediction model:\n",
-    "- Survival Random Forest (SRF) seems to be the well-suited model, since it addresses right-censored problem, and meta research supports the performance of SRF over other prediction model. Some literature also suggests Deep Learning model performed really well, but for this competition I will go forward with the SRF since I'm not too well-familiar with more advanced Neural Network model."
+    "Survival Random Forest (SRF) seems to be the well-suited model, since it addresses right-censored problem, and meta research supports the performance of SRF over other prediction model. Some literature also suggests Deep Learning model performed really well, but for this competition I will go forward with the SRF since I'm not too well-familiar with more advanced Neural Network model."
    ],
    "cell_type": "markdown",
    "metadata": {}
